--- a/pms-backend/package.json
+++ b/pms-backend/package.json
@@ -11,24 +11,26 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
-    "@nestjs/core": "^10.0.0",
-    "@nestjs/platform-express": "^10.0.0",
     "@nestjs/config": "^3.2.0",
+    "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
-    "jsonwebtoken": "^9.0.2",
-    "joi": "^17.11.0",
+    "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.17.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
+    "cookie-parser": "^1.4.6",
+    "joi": "^17.11.0",
+    "jsonwebtoken": "^9.0.2",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1",
-    "cookie-parser": "^1.4.6"
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.4.5",
     "@nestjs/schematics": "^10.1.2",
     "@nestjs/testing": "^10.4.5",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.5.4",
     "prettier": "^3.3.3",
-    "prisma": "^5.17.0"
+    "prisma": "^5.17.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.4"
   }
 }
