--- a/pms-backend/.env
+++ b/pms-backend/.env
@@ -10,3 +10,6 @@ DATABASE_URL="postgresql://postgres:2024@localhost:5432/pms?schema=public"
 PORT=3000
 CORS_ORIGIN=http://localhost:5173
 JWT_SECRET=devsecret
+
+# === Toggle targeted actor/audit debug logs, To turn off, set to 0 ===
+AUDIT_DEBUG=1
